# cortex-browser

./: Cargo.toml  LICENSE  Makefile  README.md  test.html
.github/workflows/: ci.yml  release.yml
scripts/: token-compare.py
src/: auth.rs  browser.rs  diff.rs  dom.rs  extract.rs  hints.rs  lib.rs  main.rs  mcp.rs  mutation.rs  pipeline.rs  recording.rs  serialize.rs
tests/: integration.rs
tests/fixtures/: blog.html  dashboard.html  ecommerce.html  spa_app.html
