[package]
name = "cortex-browser"
version = "0.1.0"
edition = "2021"
description = "Compact browser perception layer for AI agents - converts web pages into token-efficient semantic snapshots"
license = "MIT"
repository = "https://github.com/igorsilveira/cortex-browser"
readme = "README.md"
keywords = ["browser", "ai-agents", "mcp", "accessibility", "llm"]
categories = ["web-programming", "command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
chromiumoxide = "0.9.1"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
rmcp = { version = "0.16.0", features = ["transport-io", "transport-streamable-http-server", "server"] }
axum = "0.8"
tokio-util = "0.7"
schemars = "1.2.1"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
